--- a/TextGame.Api/TextGame.Api.csproj
+++ b/TextGame.Api/TextGame.Api.csproj
@@ -23,4 +23,10 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Controllers\Chapters\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\Chapters\" />
+  </ItemGroup>
 </Project>
