--- a/TextGame.Api/Properties/launchSettings.json
+++ b/TextGame.Api/Properties/launchSettings.json
@@ -41,9 +41,11 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {},
+      "httpPort": 32000,
+      "sslPort": 32001,
       "useSSL": true,
       "publishAllPorts": true
     }
