--- a/TextGame.Api/appsettings.json
+++ b/TextGame.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "SqlLiteDatabase": "Data Source=database.db"
+  }
 }
