--- a/TextGame.Api/appsettings.json
+++ b/TextGame.Api/appsettings.json
@@ -10,5 +10,13 @@
 
   "ConnectionStrings": {
     "SqlLiteDatabase": "Data Source=database.db"
+  },
+
+  "TokenAuthentication": {
+    "SecretKey": "secretkey_secretkey123!",
+    "Issuer": "DemoIssuer",
+    "Audience": "DemoAudience",
+    "TokenPath": "/api/token",
+    "CookieName": "access_token"
   }
 }
