--- a/TextGame.Api/TextGame.Api.csproj
+++ b/TextGame.Api/TextGame.Api.csproj
@@ -25,4 +25,10 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Auth\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Auth\" />
+  </ItemGroup>
 </Project>
