--- a/TextGame.Api/appsettings.json
+++ b/TextGame.Api/appsettings.json
@@ -12,6 +12,10 @@
     "SqlLiteDatabase": "Data Source=database.db"
   },
 
+  "AppSettings": {
+    "Secret": "my-secret"
+  },
+
   "TokenAuthentication": {
     "SecretKey": "secretkey_secretkey123!",
     "Issuer": "DemoIssuer",
