--- a/TextGame.Api/Properties/launchSettings.json
+++ b/TextGame.Api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5096",
+      "applicationUrl": "http://localhost:32000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -24,7 +24,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7132;http://localhost:5096",
+      "applicationUrl": "https://localhost:32001;http://localhost:32000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -41,13 +41,12 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": false,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {},
-      "httpPort": 32000,
-      "sslPort": 32001,
       "useSSL": true,
-      "publishAllPorts": true
+      "sslPort": 32001,
+      "publishAllPorts": true,
+      "httpPort": 32000
     }
   }
 }
