--- a/TextGame.Data/TextGame.Data.csproj
+++ b/TextGame.Data/TextGame.Data.csproj
@@ -21,4 +21,12 @@
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.9" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Queries\" />
+	  <None Remove="Queries\Users\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Queries\" />
+	  <Folder Include="Queries\Users\" />
+	</ItemGroup>
 </Project>
