--- a/TextGame.Core/TextGame.Core.csproj
+++ b/TextGame.Core/TextGame.Core.csproj
@@ -19,6 +19,7 @@
     <Folder Include="Cryptography\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="LazyCache" Version="2.4.0" />
     <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
