--- a/TextGame.Api/appsettings.json
+++ b/TextGame.Api/appsettings.json
@@ -16,7 +16,7 @@
     "SecretKey": "secretkey_secretkey123!",
     "Issuer": "DemoIssuer",
     "Audience": "DemoAudience",
-    "TokenPath": "/api/token",
-    "CookieName": "access_token"
+    "TokenExpiry": "00:00:10",
+    "RefreshTokenExpiry": "1:00:00:00"
   }
 }
