--- a/TextGame.Data/TextGame.Data.csproj
+++ b/TextGame.Data/TextGame.Data.csproj
@@ -9,6 +9,9 @@
 		<EmbeddedResource Include="Resources\Games\*\*.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</EmbeddedResource>
+		<EmbeddedResource Include="Resources\Games\*\chapters\*.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</EmbeddedResource>
 		<EmbeddedResource Include="Resources\Global\*.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</EmbeddedResource>
