--- a/TextGame.Core/TextGame.Core.csproj
+++ b/TextGame.Core/TextGame.Core.csproj
@@ -18,6 +18,8 @@
     <None Remove="Users\Events\" />
     <None Remove="Challenges\" />
     <None Remove="Challenges\Events\" />
+    <None Remove="GameAccounts\" />
+    <None Remove="GameAccounts\Events\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Chapters\" />
@@ -31,6 +33,8 @@
     <Folder Include="Users\Events\" />
     <Folder Include="Challenges\" />
     <Folder Include="Challenges\Events\" />
+    <Folder Include="GameAccounts\" />
+    <Folder Include="GameAccounts\Events\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.15.2" />
