--- a/TextGame.Core/TextGame.Core.csproj
+++ b/TextGame.Core/TextGame.Core.csproj
@@ -1,48 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Chapters\" />
-    <None Remove="TerminalCommands\" />
-    <None Remove="Emotions\" />
-    <None Remove="Cryptography\" />
-    <None Remove="TerminalCommands\Events\" />
-    <None Remove="Games\" />
-    <None Remove="Setup\" />
-    <None Remove="Users\" />
-    <None Remove="Users\Events\" />
-    <None Remove="Challenges\" />
-    <None Remove="Challenges\Events\" />
-    <None Remove="GameAccounts\" />
-    <None Remove="GameAccounts\Events\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Chapters\" />
-    <Folder Include="TerminalCommands\" />
-    <Folder Include="Emotions\" />
-    <Folder Include="Cryptography\" />
-    <Folder Include="TerminalCommands\Events\" />
-    <Folder Include="Games\" />
-    <Folder Include="Setup\" />
-    <Folder Include="Users\" />
-    <Folder Include="Users\Events\" />
-    <Folder Include="Challenges\" />
-    <Folder Include="Challenges\Events\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="FluentResults" Version="3.15.2" />
-    <PackageReference Include="FluentValidation" Version="11.7.1" />
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
-    <PackageReference Include="MediatR" Version="12.1.1" />
-    <PackageReference Include="LazyCache" Version="2.4.0" />
-    <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TextGame.Data\TextGame.Data.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentResults" Version="3.15.2" />
+		<PackageReference Include="FluentValidation" Version="11.7.1" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
+		<PackageReference Include="MediatR" Version="12.1.1" />
+		<PackageReference Include="LazyCache" Version="2.4.0" />
+		<PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\TextGame.Data\TextGame.Data.csproj" />
+	</ItemGroup>
 </Project>
