--- a/TextGame.Data/TextGame.Data.csproj
+++ b/TextGame.Data/TextGame.Data.csproj
@@ -12,12 +12,11 @@
 		<EmbeddedResource Include="Resources\Games\*\chapters\*.json" WithCulture="false">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</EmbeddedResource>
-		<EmbeddedResource Include="Resources\Global\*.json" WithCulture="false">
+		<EmbeddedResource Include="Resources\Games\*\locations\*.json" WithCulture="false">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</EmbeddedResource>
-		<EmbeddedResource Include="Resources\Games\a001\locations\playground.de-DE.json">
-		  <WithCulture>false</WithCulture>
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		<EmbeddedResource Include="Resources\Global\*.json" WithCulture="false">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</EmbeddedResource>
 	</ItemGroup>
 	<ItemGroup>
@@ -27,22 +26,5 @@
 		<PackageReference Include="FluentMigrator.Runner.SQLite" Version="3.3.2" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.9" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-	</ItemGroup>
-	<ItemGroup>
-	  <None Remove="Resources\Games\a001\locations\" />
-	  <None Remove="Contracts\Locations\" />
-	  <None Remove="Contracts\Navigation\" />
-	  <None Remove="Contracts\GameObjects\" />
-	  <None Remove="Sources\ResourceFiles\Challenges\" />
-	  <None Remove="Resources\Games\a001\locations\waiting-room-challenge-learn-key-shift-tab.de-DE.json" />
-	  <None Remove="Sources\ResourceFiles\NavigationCommands\" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Resources\Games\a001\locations\" />
-	  <Folder Include="Contracts\Locations\" />
-	  <Folder Include="Contracts\Navigation\" />
-	  <Folder Include="Contracts\GameObjects\" />
-	  <Folder Include="Sources\ResourceFiles\Challenges\" />
-	  <Folder Include="Sources\ResourceFiles\NavigationCommands\" />
 	</ItemGroup>
 </Project>
